Fixed spacing between list items. Added transition to submit button. Positioned header to be central.

--- a/styles.css
+++ b/styles.css
@@ -8,43 +8,55 @@ body {
   width: 100px;
 }
 
+.title-header {
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 30px;
+}
+
 .form-container {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
-
 }
 
-.res-form {
+.res-form, .form-header {
   list-style-type: none;
   padding: 0;
   margin: 0 auto;
   max-width: 1000px;
 }
 
+h3.form-header {
+  margin-bottom: 15px;
+}
+
 .res-form li {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin: 4px 0;
 }
 
 .res-form > li > label {
   padding: 10px;
+  font-size: 17px;
   letter-spacing: 0.09em;
   text-transform: uppercase;
   font-weight: 550;
   flex: 1 0 200px;
-  max-width: 350px;
+  max-width: 235px;
 }
 
 .res-form > li > label + * {
-  flex: 1 0 350px;
+  flex: 1 0 235px;
 }
 
 .res-form li input,
 .res-form li select {
   padding: 10px;
   border: none;
+  border-radius: 15px;
 }
 
 input[type="text"], input[type="time"], input[type="number"], select {
@@ -53,14 +65,27 @@ input[type="text"], input[type="time"], input[type="number"], select {
 
 .res-form textarea {
   margin: 2px 0;
+  border-radius: 12px;
 }
 
 #submit-button {
   margin: 25px auto;
   padding: 20px 90px;
+  border-radius: 15px;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 0.1em;
   background-color: #3a3a3a;
   color: #f5deb3;
+  box-shadow: 0px 8px 15px #9E9E9E;
+  cursor: pointer;
+  border: none;
+  transition: all 0.3s ease 0s;
+}
+
+#submit-button:hover {
+  color: #3a3a3a;
+  background-color: #5fdeb3;
+  transform: translateY(7px);
+  box-shadow: 0px -8px 15px #9E9E9E;
 }
